--- a/Simulacion/packages.config
+++ b/Simulacion/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="chi" version="0.1.1" targetFramework="net461" />
   <package id="LinqStatistics" version="2.2.0" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
 </packages>
