--- a/Simulacion/Simulacion.csproj
+++ b/Simulacion/Simulacion.csproj
@@ -32,12 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LinqStatistics, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\LinqStatistics.2.2.0\lib\net40\LinqStatistics.dll</HintPath>
-    </Reference>
-    <Reference Include="LiveCharts, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiveCharts.0.9.7\lib\net45\LiveCharts.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -62,7 +56,7 @@
     <Compile Include="Modelos\GeneradorMixto.cs" />
     <Compile Include="Modelos\GeneradorMultiplicativo.cs" />
     <Compile Include="Modelos\Generado.cs" />
-    <Compile Include="Modelos\Subintervalos.cs" />
+    <Compile Include="Modelos\Intervalo.cs" />
     <Compile Include="TP_1.cs">
       <SubType>Form</SubType>
     </Compile>
