--- a/Simulacion/Simulacion.csproj
+++ b/Simulacion/Simulacion.csproj
@@ -52,9 +52,13 @@
     <Compile Include="Grafica1.Designer.cs">
       <DependentUpon>Grafica1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modelos\GeneradorLenguaje.cs" />
-    <Compile Include="Modelos\GeneradorMixto.cs" />
-    <Compile Include="Modelos\GeneradorMultiplicativo.cs" />
+    <Compile Include="Modelos\Distribuciones\Exponencial.cs" />
+    <Compile Include="Modelos\Distribuciones\Normal.cs" />
+    <Compile Include="Modelos\Distribuciones\Poisson.cs" />
+    <Compile Include="Modelos\Distribuciones\Uniforme.cs" />
+    <Compile Include="Modelos\Generadores\GeneradorLenguaje.cs" />
+    <Compile Include="Modelos\Generadores\GeneradorMixto.cs" />
+    <Compile Include="Modelos\Generadores\GeneradorMultiplicativo.cs" />
     <Compile Include="Modelos\Generado.cs" />
     <Compile Include="Modelos\Intervalo.cs" />
     <Compile Include="TP_1.cs">
@@ -65,6 +69,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TP_3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TP_3.Designer.cs">
+      <DependentUpon>TP_3.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Grafica1.resx">
       <DependentUpon>Grafica1.cs</DependentUpon>
     </EmbeddedResource>
@@ -80,6 +90,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TP_3.resx">
+      <DependentUpon>TP_3.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
