--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,10 @@ paket-files/
 __pycache__/
 *.pyc
 /Trabajos Practicos
+/02-Caso_Encuesta_Consignas-TPED-1cuat-2018.pdf
+/bd-nuestra.xlsx
+/mapa de procesos.docx
+/mapa_proceso.png
+/Parcial1.pdf
+/trabajo de estadistica 2k8 2018_Version_2.docx
+/trabajo de estadistica 2k8 2018_Version_3.docx
