--- a/Simulacion/packages.config
+++ b/Simulacion/packages.config
@@ -3,4 +3,5 @@
   <package id="chi" version="0.1.1" targetFramework="net461" />
   <package id="LinqStatistics" version="2.2.0" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
+  <package id="Portable.Meta.Numerics" version="3.1.0.73149" targetFramework="net461" />
 </packages>
