--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,4 @@ __pycache__/
 /Parcial1.pdf
 /trabajo de estadistica 2k8 2018_Version_2.docx
 /trabajo de estadistica 2k8 2018_Version_3.docx
+/cosas
