Avances en carga y llegada de vehiculos

--- a/Simulacion/Simulacion.csproj
+++ b/Simulacion/Simulacion.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Grafica1.cs</DependentUpon>
     </Compile>
     <Compile Include="Modelos-Colas-2\DateTimeConverter.cs" />
+    <Compile Include="Modelos-Colas-2\Evento.cs" />
     <Compile Include="Modelos-Colas-2\Llegada.cs" />
     <Compile Include="Modelos-Colas-2\Transbordador.cs" />
     <Compile Include="Modelos-Colas-2\Vehiculo.cs" />
